# Qt-ElectricalPowerTool

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  powercalculator.cpp  powercalculator.h
